# IntelliPi

./: Makefile  README.md  README.txt
EEGBMI_C_fda/: fda.cpp
EEGBMI_C_fft/: Makefile
EEGBMI_C_filtdownsamp/: filt_downsamp.c  makefile  sample_props.h
EEGBMI_C_main/: How to get it to run  Makefile  dataset.h  main.cpp
EEGBMI_C_main/ascii_files_3/: trial_10.asc  trial_103.asc  trial_104.asc  trial_105.asc  trial_107.asc  trial_111.asc  trial_114.asc  trial_115.asc  trial_122.asc  trial_128.asc  trial_13.asc  trial_131.asc  trial_133.asc  trial_136.asc  trial_137.asc  trial_138.asc  trial_14.asc  trial_141.asc  trial_142.asc  trial_149.asc  trial_16.asc  trial_21.asc  trial_24.asc  trial_28.asc  trial_30.asc  trial_34.asc  trial_40.asc  trial_41.asc  trial_42.asc  trial_54.asc  trial_57.asc  trial_70.asc  trial_73.asc  trial_75.asc  trial_76.asc  trial_80.asc  trial_81.asc  trial_9.asc  trial_90.asc  trial_93.asc  (+1 more)
MLP_C_par_barriers/: README
MLP_C_par_barriers/data/: DataSet
MLP_C_par_barriers/src/: wrapper.c
bluez/: Makefile
branches/old_stuff/MLP_batch_sequential/: configure.ac
branches/old_stuff/MLP_batch_sequential/autom4te.cache/: requests
branches/old_stuff/MLP_batch_sequential/src/: Makefile.am  Makefile.in
configs/: Dev-barebones  Dev-fullenv  Dev-rbrash.config  MaplePI.config
doc/: setupOpenWrtEnv.txt
include/: fake_feature_generator.h  feature_structure.h  main.h  mindbx_lib.h
intelliroot/: feeds.conf.default
proto_shared_mem/: Makefile
scripts/: launch_mindbx.sh
src/: main.c  mindbx_lib.c  rwalk_process.c
src/myBeeper/: main.c  (+1 more)
(+861 files in other folders)
